# service/apisvr/internal/handler/system/data/project/deleteHandler.go
@@ -1,0 +1,25 @@
+package project
+
+import (
+	"gitee.com/i-Things/core/service/apisvr/internal/logic/system/data/project"
+	"gitee.com/i-Things/core/service/apisvr/internal/svc"
+	"gitee.com/i-Things/core/service/apisvr/internal/types"
+	"gitee.com/i-Things/share/errors"
+	"gitee.com/i-Things/share/result"
+	"github.com/zeromicro/go-zero/rest/httpx"
+	"net/http"
+)
+
+func DeleteHandler(svcCtx *svc.ServiceContext) http.HandlerFunc {
+	return func(w http.ResponseWriter, r *http.Request) {
+		var req types.DataProjectDeleteReq
+		if err := httpx.Parse(r, &req); err != nil {
+			result.Http(w, r, nil, errors.Parameter.WithMsg("入参不正确:"+err.Error()))
+			return
+		}
+
+		l := project.NewDeleteLogic(r.Context(), svcCtx)
+		err := l.Delete(&req)
+		result.Http(w, r, nil, err)
+	}
+}
