# service/apisvr/internal/handler/wsRoutes.go
@@ -315,6 +315,16 @@ func RegisterWsHandlers(server *ws.Server, serverCtx *svc.ServiceContext) {
 			[]rest.Route{
 				{
 					Method:  http.MethodPost,
+					Path:    "/create",
+					Handler: systemdataproject.CreateHandler(serverCtx),
+				},
+				{
+					Method:  http.MethodPost,
+					Path:    "/delete",
+					Handler: systemdataproject.DeleteHandler(serverCtx),
+				},
+				{
+					Method:  http.MethodPost,
 					Path:    "/index",
 					Handler: systemdataproject.ProjectIndexHandler(serverCtx),
 				},
